other-cel/check-serviceaccount-secrets/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: svc-name
policies:
- ../check-serviceaccount-secrets.yaml
resources:
- resource.yaml
results:
- kind: ServiceAccount
  policy: check-serviceaccount-secrets
  resources:
  - bad-svc-account
  result: fail
  rule: deny-secrets
- kind: ServiceAccount
  policy: check-serviceaccount-secrets
  resources:
  - good-svc-account
  result: pass
  rule: deny-secrets
